deployment/overlays/main/mcp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcp
spec:
  template:
    spec:
      containers:
        - name: mcp
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ocirsecret
