deployment/overlays/main/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dmozdb
spec:
  template:
    spec:
      containers:
        - name: dmozdb
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ocirsecret
