deployment/overlays/main/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  template:
    spec:
      containers:
        - name: web
          imagePullPolicy: Always
      imagePullSecrets:
        - name: ocirsecret
